[metadata]
name = gint
version = 0.1.pre
author = Oskar Enoksson
author_email = enok@lysator.liu.se
description = A Python class for polynomials over GF(2), based on Pythons built-in integers, efficiently implemented in C
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enok71/gint
project_urls =
    Bug Tracker = https://github.com/enok71/gint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

