[metadata]
name = gint
version = 0.1.0
author = Oskar Enoksson
author_email = enok@lysator.liu.se
description = A Python class for polynomial arithmetic over GF(2), based on Pythons built-in integers, efficiently implemented in C
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enok71/gint
project_urls =
    Bug Tracker = https://github.com/enok71/gint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest

[tool:pytest]
testpaths = tests
